--- a/src/app/modules/tracking/tracking-view/tracking-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.scss
@@ -618,6 +618,12 @@ $stepper-gray: #c5ced8;
     h3 {
         font-size: 16px;
         font-weight: 600;
+        margin: 0 0 4px;
+    }
+
+    .document-info {
+        font-size: 14px;
+        color: #666;
         margin: 0 0 16px;
     }
 
